SCSS Tweaked .o-timer__text digit to wrap correctly

--- a/app/assets/scss/objects/o-timer.scss
+++ b/app/assets/scss/objects/o-timer.scss
@@ -5,6 +5,7 @@
 
 .o-timer__text {
   display: block;
+  max-width: 7em;
 
   font-family: $font__mono;
   font-size: 2.25em;
@@ -14,7 +15,11 @@
   color: currentColor;
   background-color: transparent;
 
+  @include margin(null auto);
+
   @include media($dr__large) {
+    max-width: 60vw;
+
     font-size: 8vw;
   }
 }
